--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="page-content">
                         <div class="bio-section">
                             <div class="bio-image-wrapper">
-                                <img src="images/bio/bio-1.jpg" class="bio-image" alt="藝術家照片" loading="eager"
+                                <img src="images/bio/bio-1.JPG" class="bio-image" alt="藝術家照片" loading="eager"
                                     onerror="console.error('Bio image failed to load:', this.src); this.style.display='none'; this.nextElementSibling.style.display='flex';"
                                     onload="console.log('Bio image loaded successfully:', this.src);">
                                 <div class="bio-image-placeholder" style="display: none;">
