--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曾詠振｜Yung-cheng tseng</title>
+    <title>曾詠振｜Yung-Cheng Tseng</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,7 +20,8 @@
     <nav class="navigation">
         <div class="nav-container">
             <!-- 左側：Logo（絕對靠左） -->
-            <a href="#" class="logo" onclick="showPage('home'); return false;">Yung-cheng tseng</a>
+            <a href="#" class="logo" onclick="showPage('home'); return false;" data-lang-en="Yung-Cheng Tseng"
+                data-lang-zh="曾 詠 振">Yung-Cheng Tseng</a>
 
             <!-- 中間：導覽連結（絕對居中） -->
             <div class="nav-menu-center">
@@ -83,7 +85,7 @@
             <div id="home" class="page active">
                 <section class="hero">
                     <div class="hero-slideshow"></div>
-                    <div class="copyright">©2025 by Yung-Cheng Tseng . All Rights Reserved.</div>
+                    <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
                 </section>
             </div>
             <!-- 藝術家介紹頁面 -->
@@ -204,12 +206,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="copyright">©2025 by Yung-Cheng Tseng . All Rights Reserved.</div>
+                <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
             </div>
     </div>
 
     <!-- 書法頁面 -->
-    <div id="calligraphy" class="page">
+    <div id="calligraphy" class="page calligraphy-scope-wrapper">
         <div class="page-container">
             <h1 class="page-title"></h1>
             <div class="page-content">
@@ -322,7 +324,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copyright">©2025 by Yung-Cheng Tseng . All Rights Reserved.</div>
+            <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
         </div>
     </div>
 
@@ -378,7 +380,7 @@
 
                 </div>
             </div>
-            <div class="copyright">©2025 by Yung-Cheng Tseng . All Rights Reserved.</div>
+            <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
         </div>
     </div>
 
@@ -404,7 +406,7 @@
                     <div class="artwork-list">
                         <!-- 其他展演內容 -->
                     </div>
-                    <div class="copyright">©2025 by Yung-Cheng Tseng . All Rights Reserved.</div>
+                    <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
                 </div>
             </div>
         </div>
