--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
             <div class="page-content">
                 <section id="seal-carving-section" class="content-section">
                     <div class="scene-container">
+                        <div class="cube-click-text">Click</div>
                         <div class="cube" id="cube">
                             <div class="cube-face face-front"></div>
                             <div class="cube-face face-back"></div>
@@ -365,6 +366,45 @@
                         <button id="close-lightbox">✕</button>
                     </div>
                 </section>
+
+                <!-- 新頁面：從右邊滑入的完整作品展示 -->
+                <div id="seal-carving-detail-view" class="seal-detail-view hidden">
+                    <div class="seal-detail-container">
+                        <div class="seal-detail-image-wrapper">
+                            <img src="images/seal carving/seal carving_full.jpg" alt="篆刻作品完整圖"
+                                class="seal-detail-image">
+                        </div>
+                        <div class="seal-detail-info">
+                            <h2 class="seal-detail-title">只緣身在此山中</h2>
+                            <p class="seal-detail-meta">2026｜印石、墨</p>
+                            <div class="seal-detail-description">
+                                <p>予寄居深山與一老者
+
+                                    相結伴去歲彼忽爾辭塵
+
+                                    予遂操刀將其口頭禪
+
+                                    集為印屏 以銘斯人
+
+                                    乙巳鏡齋主</p>
+                                <p>只緣身在此山中
+
+                                    邊款：此山即獅頭山也所依石洞古稱老石屋后易名獅巖洞，竹子</p>
+                                <p>自依止法依止莫異依止
+
+                                    邊款：墨尋海外仙，山字有心中丘壑，靜齋</p>
+                                <p>今生一見面多少香火緣</p>
+                                <p>三界流浪漢</p>
+                                <p>六道獨行俠
+
+                                    邊款：肖行，千山獨行鏡</p>
+                                <p>任運</p>
+                                <p>生如夏華死如秋葉</p>
+                                <p>喫得睡得作得拾得</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="copyright">©2026 by Yung-Cheng Tseng . All Rights Reserved.</div>
         </div>
