--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
                                     乙巳鏡齋主</p>
                                 <p>只緣身在此山中
 
-                                    邊款：此山即獅頭山也所依石洞古稱老石屋后易名獅巖洞，竹子</p>
+                                    / 邊款：此山即獅頭山也所依石洞古稱老石屋后易名獅巖洞，竹子</p>
                                 <p>自依止法依止莫異依止
 
-                                    邊款：墨尋海外仙，山字有心中丘壑，靜齋</p>
+                                    / 邊款：墨尋海外仙，山字有心中丘壑，靜齋</p>
                                 <p>今生一見面多少香火緣</p>
                                 <p>三界流浪漢</p>
                                 <p>六道獨行俠
 
-                                    邊款：肖行，千山獨行鏡</p>
+                                    / 邊款：肖行，千山獨行鏡</p>
                                 <p>任運</p>
                                 <p>生如夏華死如秋葉</p>
                                 <p>喫得睡得作得拾得</p>
