--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
         <!-- 手機版：漢堡選單展開內容 -->
         <div class="mobile-menu-overlay" id="mobile-menu-overlay">
+            <img src="images/favicon.png" alt="Logo" class="mobile-menu-favicon">
             <div class="mobile-menu-content">
                 <ul class="mobile-nav-menu">
                     <li><a href="#" class="mobile-nav-link" onclick="handleMobileNavClick('bio', this); return false;">
@@ -524,13 +525,13 @@
                             <div class="image-wrapper">
                                 <img src="images/painting/painting-01-detail-6.jpg" alt="作品名 07">
                             </div>
-                            <div class="caption">《布上水墨-雨點》​2018｜93x145cm｜墨、布</div>
+                            <div class="caption">《布上水墨-雨點》​2018｜93x145cm｜布、墨汁</div>
                         </div>
                         <div class="painting-item small-size">
                             <div class="image-wrapper">
                                 <img src="images/painting/painting-01-detail-5.jpg" alt="作品名 06">
                             </div>
-                            <div class="caption">《布上水墨-雨點2018》｜局部｜墨、布</div>
+                            <div class="caption">《布上水墨-雨點》2018｜局部｜布、墨汁</div>
                         </div>
                     </div>
 
