--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <!-- 手機版：漢堡選單展開內容 -->
         <div class="mobile-menu-overlay" id="mobile-menu-overlay">
-            <img src="images/favicon.png" alt="Logo" class="mobile-menu-favicon">
+            <img src="favicon.png" alt="Logo" class="mobile-menu-favicon">
             <div class="mobile-menu-content">
                 <ul class="mobile-nav-menu">
                     <li><a href="#" class="mobile-nav-link" onclick="handleMobileNavClick('bio', this); return false;">
