--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="page-content">
                 <section id="seal-carving-section" class="content-section">
                     <div class="scene-container">
-                        <div class="cube-click-text">Click</div>
+                        <div class="cube-click-text" data-lang-en="Click" data-lang-zh="點 擊">Click</div>
                         <div class="cube" id="cube">
                             <div class="cube-face face-front"></div>
                             <div class="cube-face face-back"></div>
