--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:url" content="https://yiruhsu.github.io/yung-cheng-tseng/" />
     <meta property="og:title" content="曾詠振｜Yung-Cheng Tseng" />
     <meta property="og:description" content="Calligraphy, Seal Carving, and Painting Art Portfolio" />
-    <meta property="og:image" content="https://yiruhsu.github.io/yung-cheng-tseng/favicon.png" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="400" />
+    <meta property="og:image" content="https://yiruhsu.github.io/yung-cheng-tseng/favicon-32.png?v=2" />
+    <meta property="og:image:width" content="32" />
+    <meta property="og:image:height" content="32" />
     <meta property="og:image:type" content="image/png" />
     
     <!-- Twitter -->
@@ -21,7 +21,7 @@
     <meta name="twitter:url" content="https://yiruhsu.github.io/yung-cheng-tseng/" />
     <meta name="twitter:title" content="曾詠振｜Yung-Cheng Tseng" />
     <meta name="twitter:description" content="Calligraphy, Seal Carving, and Painting Art Portfolio" />
-    <meta name="twitter:image" content="https://yiruhsu.github.io/yung-cheng-tseng/favicon.png" />
+    <meta name="twitter:image" content="https://yiruhsu.github.io/yung-cheng-tseng/favicon-32.png?v=2" />
     
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
